@@ -54,6 +54,8 @@ version 2.x.x:
 	Finch:
 	* New default binding ctrl+x to open context menus.
 	* Menu triggers and other bindings will no longer conflict.
+	* Middle click pastes the internal clipboard (when mouse support is
+	  enabled).
 
 version 2.4.1 (03/31/2008):
 	http://developer.pidgin.im/query?status=closed&milestone=2.4.1
